<resources>
    <string name="app_name">Aplicacion2</string>
    <string name="Tittle">Eres capaz de completar todos los retos?</string>
    <string name="boton1">Historia</string>
    <string name="boton2">Biologia</string>
    <string name="boton3">Matematicas</string>
    <string name="boton4">Lengua</string>
    <string name="title_activity_reto">retoActivity</string>
    <string name="Pregunta">En que año se descubrio america?</string>
    <string name="comprobar">Submit</string>
    <string name="botonAyuda">Pista</string>
    <string name="textoNum">Calcula el resultado de la siguiente operacion: y+x = 2</string>
    <string name="textoReto2">Saca una foto a una flor de color azul</string>
    <string name="textoReto3">En que idioma esta hecha la cancion que suena?</string>
    <string name="botonimagen">Pista</string>
    <string name="botonaudio">Reproducir</string>

</resources>
