<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Tittle"
        android:textColor="#0423EB"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="125dp"
        android:layout_height="107dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/boton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tittle" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="125dp"
        android:layout_height="107dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tittle" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="125dp"
        android:layout_height="107dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/boton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton1" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="125dp"
        android:layout_height="107dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:text="@string/boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton2" />
</androidx.constraintlayout.widget.ConstraintLayout>